--- a/src/main/resources/charlesmercado0522/weatherapp/weatherApp.fxml
+++ b/src/main/resources/charlesmercado0522/weatherapp/weatherApp.fxml
@@ -21,7 +21,7 @@
             <Font name="System Bold" size="22.0" />
          </font>
       </Text>
-      <GridPane layoutX="12.0" layoutY="94.0" prefHeight="212.0" prefWidth="576.0">
+      <GridPane fx:id="gridPane" layoutX="12.0" layoutY="94.0" prefHeight="212.0" prefWidth="576.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="294.0" minWidth="10.0" prefWidth="291.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="10.0" prefWidth="284.0" />
