--- a/src/main/resources/charlesmercado0522/weatherapp/weatherApp.fxml
+++ b/src/main/resources/charlesmercado0522/weatherapp/weatherApp.fxml
@@ -7,13 +7,25 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.*?>
 
+<?import javafx.css.Stylesheet?>
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="charlesmercado0522.weatherapp.WeatherAppController">
    <children>
+      <VBox layoutX="204.0" layoutY="10.0">
+         <stylesheets>
+         </stylesheets>
+         <Label text="Weather App" styleClass="label" />
+         <TextField fx:id="cityTextField" promptText="Enter city name" styleClass="textfield"/>
+         <Button text="Get Weather" onAction="#getWeather" styleClass="button" />
+      </VBox>
       <Text fx:id="city" layoutX="14.0" layoutY="55.0" strokeType="OUTSIDE" strokeWidth="0.0" text="City">
          <font>
             <Font name="System Bold" size="42.0" />
-
          </font>
       </Text>
       <Text fx:id="country" layoutX="15.0" layoutY="82.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Country">
@@ -22,19 +34,19 @@
          </font>
       </Text>
       <GridPane fx:id="gridPane" layoutX="12.0" layoutY="94.0" prefHeight="212.0" prefWidth="576.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="294.0" minWidth="10.0" prefWidth="291.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="10.0" prefWidth="284.0" />
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="294.0" minWidth="10.0" prefWidth="291.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="10.0" prefWidth="284.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="10.0" prefWidth="284.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="10.0" prefWidth="284.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints maxHeight="101.0" minHeight="10.0" prefHeight="96.0" vgrow="SOMETIMES" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="10.0" prefWidth="284.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints maxHeight="101.0" minHeight="10.0" prefHeight="96.0" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="101.0" minHeight="10.0" prefHeight="37.0" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="101.0" minHeight="10.0" prefHeight="37.0" vgrow="SOMETIMES" />
             <RowConstraints maxHeight="101.0" minHeight="10.0" prefHeight="37.0" vgrow="SOMETIMES" />
-        </rowConstraints>
+         </rowConstraints>
          <children>
             <ImageView fx:id="img1" fitHeight="83.0" fitWidth="88.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.valignment="CENTER" GridPane.vgrow="NEVER" />
             <ImageView fx:id="img2" fitHeight="83.0" fitWidth="88.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="NEVER" GridPane.valignment="CENTER" GridPane.vgrow="NEVER" />
