--- a/src/main/resources/charlesmercado0522/weatherapp/weatherApp.fxml
+++ b/src/main/resources/charlesmercado0522/weatherapp/weatherApp.fxml
@@ -1,27 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<?import javafx.css.Stylesheet?>
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="charlesmercado0522.weatherapp.WeatherAppController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="charlesmercado0522.weatherapp.WeatherAppController">
    <children>
       <VBox layoutX="204.0" layoutY="10.0">
          <stylesheets>
          </stylesheets>
-         <Label text="Weather App" styleClass="label" />
-         <TextField fx:id="cityTextField" promptText="Enter city name" styleClass="textfield"/>
-         <Button text="Get Weather" onAction="#getWeather" styleClass="button" />
+         <Label styleClass="label" text="Weather App" />
+         <TextField fx:id="cityTextField" promptText="Enter city name" styleClass="textfield" />
+         <Button onAction="#getWeather" styleClass="button" stylesheets="@style.css" text="Get Weather" />
       </VBox>
       <Text fx:id="city" layoutX="14.0" layoutY="55.0" strokeType="OUTSIDE" strokeWidth="0.0" text="City">
          <font>
