--- a/src/main/resources/charlesmercado0522/weatherapp/weatherApp.fxml
+++ b/src/main/resources/charlesmercado0522/weatherapp/weatherApp.fxml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="charlesmercado0522.weatherapp.WeatherAppController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="charlesmercado0522.weatherapp.WeatherAppController">
    <children>
-      <VBox layoutX="204.0" layoutY="10.0">
-         <stylesheets>
-         </stylesheets>
-         <Label styleClass="label" text="Weather App" />
-         <TextField fx:id="cityTextField" promptText="Enter city name" styleClass="textfield" />
-         <Button onAction="#getWeather" styleClass="button" stylesheets="@style.css" text="Get Weather" />
-      </VBox>
       <Text fx:id="city" layoutX="14.0" layoutY="55.0" strokeType="OUTSIDE" strokeWidth="0.0" text="City">
          <font>
             <Font name="System Bold" size="42.0" />
@@ -126,5 +125,20 @@
             <Font name="System Bold" size="15.0" />
          </font>
       </Text>
+      <GridPane layoutX="368.0" layoutY="31.0">
+        <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="97.300537109375" minWidth="10.0" prefWidth="70.98074340820312" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="129.69412231445312" minWidth="10.0" prefWidth="129.01925659179688" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Button onAction="#getWeather" styleClass="button" stylesheets="@style.css" text="Get Weather" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="1" />
+            <TextField fx:id="cityTextField" onKeyPressed="#checkIfEnterPressed" prefHeight="26.0" prefWidth="194.0" promptText="Enter city name" styleClass="textfield" GridPane.columnIndex="1" />
+            <Label styleClass="label" text="Search City:" />
+         </children>
+      </GridPane>
    </children>
 </AnchorPane>
