--- a/src/main/resources/charlesmercado0522/weatherapp/weatherApp.fxml
+++ b/src/main/resources/charlesmercado0522/weatherapp/weatherApp.fxml
@@ -188,6 +188,7 @@
             </Text>
          </children>
       </GridPane>
-      <Button layoutX="648.0" layoutY="350.0" mnemonicParsing="false" text="Predict up to 48 Hours" onMouseClicked="#open24HrAfter24" />
+      <Button layoutX="648.0" layoutY="350.0" mnemonicParsing="false" onMouseClicked="#open24HrAfter24" text="Predict up to 48 Hours" />
+      <Button layoutX="485.0" layoutY="350.0" mnemonicParsing="false" onMouseClicked="#openAdvisory" prefHeight="27.0" prefWidth="151.0" text="Get School Advisory" />
    </children>
 </AnchorPane>
