--- a/src/main/resources/charlesmercado0522/weatherapp/schoolAdvisory.fxml
+++ b/src/main/resources/charlesmercado0522/weatherapp/schoolAdvisory.fxml
@@ -10,24 +10,24 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-<SplitPane dividerPositions="0.33" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="style.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
+<SplitPane dividerPositions="0.25" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="1005.0" stylesheets="style.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="charlesmercado0522.weatherapp.SchoolAdvisoryController">
   <items>
-    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="398.0" prefWidth="311.0" styleClass="anchorPane" stylesheets="@style.css">
+    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="398.0" prefWidth="225.0" styleClass="anchorPane" stylesheets="@style.css">
          <children>
-            <ChoiceBox fx:id="schoolSelector" layoutX="23.0" layoutY="350.0" prefWidth="150.0" />
-            <TextArea fx:id="advisoryArea" layoutX="14.0" layoutY="33.0" prefHeight="166.0" prefWidth="168.0" styleClass="textfield" stylesheets="@style.css" />
+            <ChoiceBox fx:id="schoolSelector" layoutX="48.0" layoutY="353.0" onAction="#loadTable" prefWidth="150.0" styleClass="button" stylesheets="@style.css" />
+            <TextArea fx:id="advisoryArea" layoutX="9.0" layoutY="30.0" prefHeight="166.0" prefWidth="227.0" styleClass="textfield" stylesheets="@style.css" />
             <Text fill="WHITE" layoutX="13.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Insert Advisory Here" />
-            <Button layoutX="37.0" layoutY="209.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="120.0" styleClass="button" text="Send Advisory" />
-            <Text fill="WHITE" layoutX="51.0" layoutY="345.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="label" text="Select School" />
+            <Button layoutX="62.0" layoutY="212.0" mnemonicParsing="false" onMouseClicked="#createAdvisory" prefHeight="27.0" prefWidth="120.0" styleClass="button" text="Send Advisory" />
+            <Text fill="WHITE" layoutX="76.0" layoutY="348.0" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="label" text="Select School" />
          </children></AnchorPane>
       <ScrollPane prefHeight="200.0" prefWidth="200.0">
         <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="397.0" prefWidth="399.0" styleClass="anchorPane" stylesheets="@style.css">
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="397.0" prefWidth="750.0" styleClass="anchorPane" stylesheets="@style.css">
                <children>
-                  <TableView prefHeight="398.0" prefWidth="397.0" styleClass="anchorPane" stylesheets="@style.css">
+                  <TableView fx:id="table" layoutX="-1.0" prefHeight="398.0" prefWidth="749.0" styleClass="anchorPane" stylesheets="@style.css">
                     <columns>
-                      <TableColumn prefWidth="285.0" text="Advisory" />
-                      <TableColumn minWidth="0.0" prefWidth="111.0" text="Date" />
+                      <TableColumn fx:id="advisoryField" prefWidth="445.0" text="Advisory" />
+                      <TableColumn fx:id="dateField" minWidth="0.0" prefWidth="291.0" text="Date" />
                     </columns>
                   </TableView>
                </children></AnchorPane>
